<resources>
    <string name="app_name">CriminalIntent</string>
    <string name="crime_title_hint">Enter a title for the crime</string>
    <string name="crime_title_label">Title</string>
    <string name="crime_detail_label">Detail</string>
    <string name="crime_solved_label">Solved?</string>
    <string name="activity_crime_title">Crime</string>
    <string name="crime_date">Date of Crime</string>
    <string name="show_subtitle">Show Subtitle</string>
    <string name="hide_subtitle">Hide Subtitle</string>
    <string name="subtitle">If you see something,say something</string>
    <string name="delete_crime">Delete Crime</string>
    <string name="new_crime">New Crime</string>
    <string name="empty_tip">No crime record yet :(\npress blank to add a crime</string>
    <string name="suspect_text">Choose Suspect</string>
    <string name="send_crime_text">Send Crime Report</string>
    <string name="crime_report_solved">The case was solved</string>
    <string name="crime_report_unsolved">The case was not solved</string>
    <string name="crime_report_no_suspect">There is no suspect.</string>
    <string name="crime_report_suspect">The suspect is %s.</string>
    <string name="crime_report_subject">CriminalIntent Crime Report.</string>
    <string name="send_report">Send crime report via</string>
    <string name="crime_report_content">%1$s!The crime was discovered on %2$s,%3$s,%4$s</string>
</resources>
